# crunchyroll-migrate

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
src/: auth.rs  diff.rs  export.rs  import.rs  main.rs  models.rs  ui.rs
tests/: models_test.rs
