[package]
name = "crunchyroll-migrate"
version = "0.1.1"
edition = "2024"
description = "Migrate Crunchyroll profile data between accounts"
license = "MIT"
repository = "https://github.com/SeanLF/crunchyroll-migrate"

[dependencies]
crunchyroll-rs = "0.16"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
futures-util = "0.3"
rpassword = "7"
dialoguer = "0.11"
